<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".permissions.PermissionsUtil"
    android:background="@drawable/gradient_color">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_192sdp"
        android:background="@drawable/gradient_color"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/logo_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_30sdp"
            android:src="@drawable/logoimage" />

        <ImageView
            android:id="@+id/img2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:src="@drawable/codigo" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_405sdp"
        android:layout_alignParentBottom="true"
        android:background="@drawable/layout_bg">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_9sdp"
            android:layout_marginEnd="@dimen/_11sdp"
            android:layout_marginBottom="@dimen/_7sdp"
            android:background="@drawable/layout_bg">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/gotham_book"
                android:text="@string/permission"
                android:textFontWeight="600"
                android:textSize="@dimen/_12sdp"
                android:textColor="@color/permission_heading"/>

            <TextView
                android:id="@+id/permission_cdn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/_27sdp"
                android:fontFamily="@font/gotham_book"
                android:gravity="center"
                android:text="@string/permission_condition"
                android:textAlignment="center"
                android:textFontWeight="400"
                android:textSize="@dimen/_12sdp"
                android:textStyle="normal" />

            <androidx.recyclerview.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/recyclerList_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/permission_cdn"
                android:layout_marginTop="@dimen/_10sdp"></androidx.recyclerview.widget.RecyclerView>
            <Button
                android:id="@+id/permission_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/check_permission"
                android:background="@drawable/custom_button_rounded"
                android:layout_marginTop="@dimen/_17sdp"
                android:layout_above="@id/return_link"
                android:textColor="@color/white"/>
            <TextView
                android:id="@+id/return_link"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/return_permission"
                android:paddingTop="@dimen/_11sdp"
                android:paddingBottom="@dimen/_11sdp"
                android:layout_marginTop="@dimen/_9sdp"
                android:layout_centerHorizontal="true"
                android:layout_alignParentBottom="true"
                android:textAlignment="center"
                android:textColor="@color/permission_btn"/>
        </RelativeLayout>
    </LinearLayout>

</RelativeLayout>
