<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:mask="http://schemas.android.com/apk/res-auto"
    android:fitsSystemWindows="false"
    android:background="@color/white"
    tools:ignore="Overdraw">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="2">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="254dp">
        <View
        android:id="@+id/gettyimages"
        android:layout_width="match_parent"
        android:layout_height="254dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/custom_lock_header"
        tools:ignore="MissingConstraints" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_254sdp"
                android:orientation="vertical"
                android:gravity="center"
                tools:ignore="MissingConstraints">
            <ImageView
                android:layout_width="@dimen/_101sdp"
                android:layout_height="@dimen/_254sdp"
                android:layout_marginTop="-74dp"
                android:foregroundGravity="center"
                android:src="@drawable/header"
                tools:ignore="MissingConstraints" />
            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:orientation="vertical"
            android:layout_margin="@dimen/_16sdp"
            android:layout_weight="1"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:text="@string/seguro_cont"
                android:layout_marginBottom="@dimen/_16sdp"
                android:textAppearance="@style/seguro_cont"
                android:gravity="center_horizontal|center_vertical"

                />

          <androidx.appcompat.widget.LinearLayoutCompat
              android:id="@+id/background"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical"
              android:background="@drawable/rectangle"
              android:foregroundGravity="center"
              android:gravity="center_horizontal|center_vertical">
              <TextView
                  android:layout_width="wrap_content"
                  android:layout_height="14dp"
                  android:layout_alignParentLeft="true"
                  android:layout_marginLeft="12dp"
                  android:layout_alignParentRight="true"
                  android:layout_marginRight="14dp"
                  android:layout_alignParentTop="true"
                  android:layout_marginTop="7dp"
                  android:text="@string/pin_heading"
                  android:textAppearance="@style/c_digo_de_v"
                  android:gravity="center_horizontal|center_vertical"
                  />

              <com.fs.antitheftsdk.remote_lock.maskedEditText.MaskedEditText
                  android:id="@+id/pin_editext"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:inputType="number"
                  android:layout_marginStart="@dimen/_16sdp"
                  android:layout_marginEnd="@dimen/_16sdp"
                  android:textAlignment="center"
                  android:paddingStart="@dimen/_16sdp"
                  android:paddingEnd="@dimen/_16sdp"
                  android:textColorHint="@android:color/darker_gray"
                  android:background="@null"
                  android:letterSpacing="1"
                  mask:mask="#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-##"
                  android:textAppearance="@style/some_id"/>

          </androidx.appcompat.widget.LinearLayoutCompat>
            <TextView
                android:id="@+id/txt_error"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/red"
                android:visibility="invisible"
                android:text="@string/wrong_pass"
                android:textAlignment="center"
                android:layout_marginBottom="@dimen/_16sdp"
                />

        <Button

            android:id="@+id/enter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_rectangle_grey"
            android:enabled="false"
            android:textAppearance="@style/button_prim"
            android:text="DESBLOQUEAR"/>
        </LinearLayout>
    </LinearLayout>
</FrameLayout>